# file-for-windows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: config.h  magic.def  magic.h
patch/: compress_support.patch
